added custom animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LiveLike sample app</string>
+    <string name="win_animation">winAnimation</string>
+    <string name="lose_animation">loseAnimation</string>
 </resources>
