prediction follow up added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LiveLike sample app</string>
     <string name="win_animation">winAnimation</string>
     <string name="lose_animation">loseAnimation</string>
+    <string name="prediction_follow_up">PREDICTION FOLLOW-UP</string>
 </resources>
